tests/fixtures/invalid/str_in_bool.py
# Cannot use 'in' with Str and Bool
x: bool = "hello" in True
